# slowdb

./: .gitignore  README.md  Using_SlowDB.md  docker-compose.yml  init_project.py  make.py  pyproject.toml  requirements.txt
docs/: conf.py  distribution.rst  index.rst  metrics.rst
src/slowdb/: __init__.py
src/slowdb/core/: lsm.py  storage.py  vector_store.py
src/slowdb/index/: hnsw.py  metrics.py
tests/: conftest.py  test_hnsw.py  test_integration.py  test_lsm.py  test_metrics.py  test_replication.py  test_sharding.py  test_storage.py  test_vector_store.py
